{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 43,
  "lineage": "9d07045a-3807-20fb-1221-8405140e62e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f7ffce1f0eaf29df",
            "domain": "vpc",
            "id": "eipalloc-08a1c4dc266181794",
            "network_border_group": "us-east-1",
            "network_interface": "eni-000c2b3d0ad19a59e",
            "private_dns": "ip-10-0-1-112.ec2.internal",
            "private_ip": "10.0.1.112",
            "public_dns": "ec2-44-198-147-174.compute-1.amazonaws.com",
            "public_ip": "44.198.147.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat1 us-east-1a"
            },
            "tags_all": {
              "Name": "nat1 us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Whiskeyword",
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-091d454b91944e7ef",
            "domain": "vpc",
            "id": "eipalloc-0edb6226f52aa14b6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f97ca8e7357c5a92",
            "private_dns": "ip-10-0-2-150.ec2.internal",
            "private_ip": "10.0.2.150",
            "public_dns": "ec2-18-210-234-126.compute-1.amazonaws.com",
            "public_ip": "18.210.234.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat2 us-east-1b"
            },
            "tags_all": {
              "Name": "nat2 us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Whiskeyword",
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:461307513197:loadbalancer/nginx-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "nginx-elb-316475211.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "nginx-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0213cc63128847f94",
              "i-032df06c540e1a15e"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "nginx-elb",
            "security_groups": [
              "sg-0e9bcf4be19ec447d"
            ],
            "source_security_group": "461307513197/nginx_elb_sg",
            "source_security_group_id": "sg-0e9bcf4be19ec447d",
            "subnets": [
              "subnet-047f75408e4f5b269",
              "subnet-04ca35b499d721cc0"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.Whiskeyword",
            "data.aws_ami.aws-linux",
            "aws_instance.web1",
            "aws_instance.web2",
            "aws_security_group.elb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DB1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d13aa14f3bc04dae",
            "arn": "arn:aws:ec2:us-east-1:461307513197:instance/i-0de617b450ff02510",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de617b450ff02510",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "homwork",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e15f5c0cc3feee3f",
            "private_dns": "ip-10-0-3-215.ec2.internal",
            "private_ip": "10.0.3.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0369ece43813401cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052b513f432a68a08",
            "tags": {
              "name": "DB1"
            },
            "tags_all": {
              "name": "DB1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0002f4aa7b1c8a474"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.private_1",
            "aws_vpc.Whiskeyword",
            "data.aws_ami.aws-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DB2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d13aa14f3bc04dae",
            "arn": "arn:aws:ec2:us-east-1:461307513197:instance/i-040cdba0a5dbf1f8d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-040cdba0a5dbf1f8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "homwork",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07201e57b02f12008",
            "private_dns": "ip-10-0-4-24.ec2.internal",
            "private_ip": "10.0.4.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-084fa8cdb1614fe81",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0930992a4c8a8dd65",
            "tags": {
              "name": "DB2"
            },
            "tags_all": {
              "name": "DB2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0002f4aa7b1c8a474"
            ]
          },
          "dependencies": [
            "aws_vpc.Whiskeyword",
            "data.aws_ami.aws-linux",
            "aws_security_group.nginx-sg",
            "aws_subnet.private_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d13aa14f3bc04dae",
            "arn": "arn:aws:ec2:us-east-1:461307513197:instance/i-032df06c540e1a15e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032df06c540e1a15e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "homwork",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-011b64a570c34f6a1",
            "private_dns": "ip-10-0-1-118.ec2.internal",
            "private_ip": "10.0.1.118",
            "public_ip": "3.85.43.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aeecc862607baa74",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047f75408e4f5b269",
            "tags": {
              "name": "WEB 1"
            },
            "tags_all": {
              "name": "WEB 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0002f4aa7b1c8a474"
            ]
          },
          "dependencies": [
            "aws_subnet.public_1",
            "aws_vpc.Whiskeyword",
            "data.aws_ami.aws-linux",
            "aws_security_group.nginx-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d13aa14f3bc04dae",
            "arn": "arn:aws:ec2:us-east-1:461307513197:instance/i-0213cc63128847f94",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0213cc63128847f94",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "homwork",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f681a0c32e2ae092",
            "private_dns": "ip-10-0-2-12.ec2.internal",
            "private_ip": "10.0.2.12",
            "public_ip": "54.172.142.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e5c8ba8ac5180632",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ca35b499d721cc0",
            "tags": {
              "name": "WEb 2"
            },
            "tags_all": {
              "name": "WEb 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0002f4aa7b1c8a474"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.public_2",
            "aws_vpc.Whiskeyword",
            "data.aws_ami.aws-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Whiskeyword",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461307513197:internet-gateway/igw-07ebea04cfbbcaf02",
            "id": "igw-07ebea04cfbbcaf02",
            "owner_id": "461307513197",
            "tags": {
              "Name": "Whiskeyword"
            },
            "tags_all": {
              "Name": "Whiskeyword"
            },
            "vpc_id": "vpc-0e20bc8342f1d3af5"
          },
          "dependencies": [
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a1c4dc266181794",
            "connectivity_type": "public",
            "id": "nat-0d8284d74e31bc525",
            "network_interface_id": "eni-000c2b3d0ad19a59e",
            "private_ip": "10.0.1.112",
            "public_ip": "44.198.147.174",
            "subnet_id": "subnet-047f75408e4f5b269",
            "tags": {
              "Name": "NAT 1"
            },
            "tags_all": {
              "Name": "NAT 1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.Whiskeyword",
            "aws_subnet.public_1",
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edb6226f52aa14b6",
            "connectivity_type": "public",
            "id": "nat-07a2c621cc322f743",
            "network_interface_id": "eni-0f97ca8e7357c5a92",
            "private_ip": "10.0.2.150",
            "public_ip": "18.210.234.126",
            "subnet_id": "subnet-04ca35b499d721cc0",
            "tags": {
              "Name": "NAT 2"
            },
            "tags_all": {
              "Name": "NAT 2"
            }
          },
          "dependencies": [
            "aws_subnet.public_2",
            "aws_vpc.Whiskeyword",
            "aws_eip.nat2",
            "aws_internet_gateway.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "all_to_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07ebea04cfbbcaf02",
            "id": "r-rtb-0ea7574d9f0e003cf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ea7574d9f0e003cf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Whiskeyword",
            "aws_route_table.public",
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private1_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a7d0e88b5290b8201080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d8284d74e31bc525",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a7d0e88b5290b820",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_1",
            "aws_vpc.Whiskeyword",
            "aws_eip.nat1",
            "aws_internet_gateway.Whiskeyword",
            "aws_nat_gateway.gw1",
            "aws_route_table.private1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private2_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-066da181892e52ec61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07a2c621cc322f743",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-066da181892e52ec6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Whiskeyword",
            "aws_nat_gateway.gw2",
            "aws_route_table.private2",
            "aws_subnet.public_2",
            "aws_vpc.Whiskeyword",
            "aws_eip.nat2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461307513197:route-table/rtb-0a7d0e88b5290b820",
            "id": "rtb-0a7d0e88b5290b820",
            "owner_id": "461307513197",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d8284d74e31bc525",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e20bc8342f1d3af5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461307513197:route-table/rtb-066da181892e52ec6",
            "id": "rtb-066da181892e52ec6",
            "owner_id": "461307513197",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07a2c621cc322f743",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e20bc8342f1d3af5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461307513197:route-table/rtb-0ea7574d9f0e003cf",
            "id": "rtb-0ea7574d9f0e003cf",
            "owner_id": "461307513197",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ebea04cfbbcaf02",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e20bc8342f1d3af5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c14d58cb77903f37",
            "route_table_id": "rtb-0a7d0e88b5290b820",
            "subnet_id": "subnet-052b513f432a68a08"
          },
          "dependencies": [
            "aws_vpc.Whiskeyword",
            "aws_route_table.private1",
            "aws_subnet.private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017eb0eaf950f354d",
            "route_table_id": "rtb-066da181892e52ec6",
            "subnet_id": "subnet-0930992a4c8a8dd65"
          },
          "dependencies": [
            "aws_route_table.private2",
            "aws_subnet.private_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e89e2d6138bc02d5",
            "route_table_id": "rtb-0ea7574d9f0e003cf",
            "subnet_id": "subnet-047f75408e4f5b269"
          },
          "dependencies": [
            "aws_subnet.public_1",
            "aws_vpc.Whiskeyword",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096ad3cf62bd670f5",
            "route_table_id": "rtb-0ea7574d9f0e003cf",
            "subnet_id": "subnet-04ca35b499d721cc0"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461307513197:security-group/sg-0e9bcf4be19ec447d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9bcf4be19ec447d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_elb_sg",
            "name_prefix": "",
            "owner_id": "461307513197",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e20bc8342f1d3af5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461307513197:security-group/sg-0002f4aa7b1c8a474",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0002f4aa7b1c8a474",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "461307513197",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e20bc8342f1d3af5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461307513197:subnet/subnet-052b513f432a68a08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-052b513f432a68a08",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461307513197",
            "tags": {
              "Name": "private1 us-east-1a"
            },
            "tags_all": {
              "Name": "private1 us-east-1a"
            },
            "vpc_id": "vpc-0e20bc8342f1d3af5"
          },
          "dependencies": [
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461307513197:subnet/subnet-0930992a4c8a8dd65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0930992a4c8a8dd65",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461307513197",
            "tags": {
              "Name": "private2 us-east-1b"
            },
            "tags_all": {
              "Name": "private2 us-east-1b"
            },
            "vpc_id": "vpc-0e20bc8342f1d3af5"
          },
          "dependencies": [
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461307513197:subnet/subnet-047f75408e4f5b269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-047f75408e4f5b269",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461307513197",
            "tags": {
              "Name": "public1 us-east-1a"
            },
            "tags_all": {
              "Name": "public1 us-east-1a"
            },
            "vpc_id": "vpc-0e20bc8342f1d3af5"
          },
          "dependencies": [
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461307513197:subnet/subnet-04ca35b499d721cc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04ca35b499d721cc0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461307513197",
            "tags": {
              "Name": "public2 us-east-1b"
            },
            "tags_all": {
              "Name": "public2 us-east-1b"
            },
            "vpc_id": "vpc-0e20bc8342f1d3af5"
          },
          "dependencies": [
            "aws_vpc.Whiskeyword"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Whiskeyword",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461307513197:vpc/vpc-0e20bc8342f1d3af5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094ea74071776e1fa",
            "default_route_table_id": "rtb-019b8de2383a0be1f",
            "default_security_group_id": "sg-050ad3709de41325c",
            "dhcp_options_id": "dopt-01ddc62a5413cd3cd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e20bc8342f1d3af5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-019b8de2383a0be1f",
            "owner_id": "461307513197",
            "tags": {
              "Name": "Whiskeyword"
            },
            "tags_all": {
              "Name": "Whiskeyword"
            }
          }
        }
      ]
    }
  ]
}